# QuickTalk-

./: .env.dev  .env.dev.https  .env.example  .env.https  .env.production  .gitignore  8443)  AI_AGENT_INSTRUCTIONS.md  API密钥字段错误修复报告.md  AUDIT_REPORT.md  BUGFIX_SQL_AMBIGUOUS_2025-10-18.md  CLEANUP_REPORT.md  CUSTOMER_LIST_SORT_FIX_2025-10-18.md  CUSTOMER_NAME_UNIFICATION.md  Cargo.toml  DATABASE-INIT-ANALYSIS.md  DATABASE_CONFIG.md  DATABASE_UPGRADE_PATH.md  DELIVERY_README.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST_CUSTOMER_NAME.md  DEPLOYMENT_GUIDE.md  DEV-README.md  DEVELOPMENT_VS_PRODUCTION.md  DYNAMIC-IP-SOLUTION.md  Git分支管理指南.md  HTTPS-COMPLETE.md  HTTPS-FINAL-REPORT.md  HTTPS-GUIDE.md  HTTPS-IMPLEMENTATION-SUMMARY.md  HTTPS-PRODUCTION-ASSESSMENT.md  HTTPS-STARTUP-GUIDE.md  LETS-ENCRYPT-GUIDE.md  LIGHTWEIGHT_SERVER_DEPLOYMENT.md  MERGE_STRATEGY.md  MESSAGE-SEND-FIX-REPORT.md  PHASE7_COMPLETION_REPORT.md  PHASE_6_COMPLETION_REPORT.md  PHASE_7_CODE_QUALITY_REANALYSIS.md  PRODUCTION-API-FIX.md  (+296 more)
backend/: .env.example  .env.ubuntu  ACME_INTEGRATION_GUIDE.md  COMPILE-FIX-PROGRESS.md  Cargo-test.toml  Cargo.toml  DATABASE_COMPILE_CHECK_COVERAGE.md  HANDLER-MIGRATION-GUIDE.md  PHASE1-COMPLETE.md  PHASE2-COMPLETE.md  PHASE3-COMPLETE.md  PHASE4-COMPLETE.md  REFACTOR-PLAN.md  REFACTOR_COMPILE_TIME_CHECK.md  REPOSITORIES-USAGE.md  SEA-ORM-IMPLEMENTATION.md  SEA-ORM-MODULAR-PROGRESS.md  SEA-ORM-REFACTOR-STATUS.md  SERVICES-USAGE.md  SQLX_COMPILE_TIME_CHECK.md  SQLX为什么没检查出错误.md  check_images.py  cleanup_shops.sql  create_test_shop.sh  dev-start.bat  employee_management_migration.sql  fix-services.ps1  fix_errors.py  generate-cert.bat  init_db.py  list_shops.py  put.json  quicktalk.sqlite-shm  quicktalk.sqlite-wal  reset_database.sql  run-foreground.ps1  run_server.bat  shop.json  shop_payment_migration.sql  shops.json  (+8 more)
backend/.cargo/: config.toml
backend/.sqlx/: README.md  query-0885cab843258a651043ade3653b6e10b582934dfe533111113f0985f8156d9e.json  query-1002e305a16cba77c5abf28e579cd7b73fbb2d6035888faad7f7ff13e25fc4a1.json  query-1008fe1d9c4a9e99a47af8c311c58fe7c071b24877ddc6c208a20f009163c15d.json  query-11ad09b2391b6c16d84dbc502fae957cddfd5461a6156a7c52992cb576fc5f9a.json  query-18ff9e3223c73f785aef4ff3674a44313f9ef12efcaf61344c345b1f60fe77f2.json  query-1abdd7d5cc7f1324700c5a420a05610ee89b0d4b1f9e5dc8c2693ffb9bf1286b.json  query-22fe2b4e085cd798cf4be031ec561e134475c64fd605a605a821db8f930de99e.json  query-24fdc4b2756f5b3f6be9c01a931431296b4d8c6d941ed16fef5a17c40f734148.json  query-2dbc66be6653441c375a10107a0a9cd68951589faf023a9576b7e920a1e6c9e1.json  query-35e50ba31b7cc2f50aba5a880ac5a51e3e7153380581afbb3dea043a06518bb0.json  query-4f43636d81941384553cf5f4690db38efad1fdef2f9343d320c00d396f32ada7.json  query-4fc531c44e184c0429ad5e60a0109810689a7be1fe266282f4f3f6b230e384ff.json  query-6586497d392b99c8d5babfc1d55c624cfd9e10056df68e5a4bff0ecc1608758a.json  query-6abfec7e535c5ab6b58c929f3a4d4d845a3404405ce4960e8cbdd6e1d9c44334.json  query-6bb7ae934ea07ae50debf1995d6f333dad6b4c3ae3985613bfd3e3b725abf67a.json  query-75a4ca31917b96fcb0d550cb39c8d7ef9276eef3fd26d36e0c6066397f9a0e93.json  query-762541b034b7c8e70b0508ecb9bf73e6844dfa94bdcb4889cb5700aac10f5833.json  query-7dce4d13ad86896225f361a79121813abc2c69d82dbc16aefe95846b27bf0fc7.json  query-858fcd26fbd21087db8623636eadbeaa105f408c7595208c300ea3761f9463be.json  query-88c185895e932022b8989619b346957b492797c99c131a323d3094ddb3df5d35.json  query-8a4805a19d6a4c33227c8f1193ef4c3e6056b4a02d2866e993fb7ff15a3749c3.json  query-8b755692b8bbdc406ce4604543cca6daad11aac3dd54ccee0b0547d34d698130.json  query-99bd0656cf5fb354a289918f924846277c82c1c80b1ad758ae5640cf0364503b.json  query-ad2b032ce585e55793f8da665e79c45d98354d4b841a9b4e3db4a4953feba1c0.json  query-b16a2cf499842b1f1443c85d8627b5efe4cc4641be3d46e7d6017357bcbb3df2.json  query-b46d22783bd1bd0fed36b1450b4a4eb6ff263a7301064d75fd4d5d7a4fb68147.json  query-b495abe02e457c2821c4a9ec4b3e48519b5a6d0c71000ff66a729f4150638ee2.json  (+11 more)
backend/migration/: Cargo.toml
(+1520 files in other folders)
