[package]
name = "customer-service-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "signal"] }
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 移除 native-tls 避免 OpenSSL 交叉编译问题，使用最小化配置
sqlx = { version = "0.7", features = ["sqlite", "chrono", "uuid", "macros", "runtime-tokio-rustls"], default-features = false }
# 强制使用 bundled SQLite 进行交叉编译
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
# Sea-ORM 现代化 ORM 支持
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
# Migration 迁移支持（本地路径）- 暂时禁用避免 CLI 编译问题
# migration = { path = "./migration" }
bcrypt = "0.15"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
hmac = "0.12"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
futures-util = "0.3"
dotenvy = "0.15"
thiserror = "1.0"
tokio-rustls = "0.24"
rustls = "0.21"

# HTTPS 可选依赖 (使用 Rustls 避免 OpenSSL 交叉编译问题)
rustls-pemfile = { version = "1.0", optional = true }
axum-server = { version = "0.6", features = ["tls-rustls"], optional = true }

[features]
default = ["rustls-tls"]
https = ["rustls-pemfile", "axum-server"]
rustls-tls = []

# 针对 musl 静态编译优化
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"