[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
sea-orm-migration = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }

[dependencies.sea-orm]
version = "0.12"
features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "macros",
]
